# sydar

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build-docker-multi-arch.sh  check  check.ps1  fix_account_sig.py  fix_params.sh
bridge/: .gitignore  Cargo.toml  config.yaml
bridge/docs/: README.md
bridge/src/: app_config.rs  app_dirs.rs  client_handler.rs  default_client.rs  hasher.rs  inprocess_node.rs  lib.rs  main.rs  mining_state.rs  pow_diagnostic.rs  prom.rs  sahyadriapi.rs  share_handler.rs  stratum_listener.rs  stratum_server.rs  tracing_setup.rs
cli/: Cargo.toml
cli/src/: cli.rs  error.rs  imports.rs  lib.rs  main.rs  matchers.rs  utils.rs
cli/src/extensions/: transaction.rs
cli/src/modules/: account.rs  address.rs  broadcast.rs  compound.rs  connect.rs  create-unsigned-tx.rs  details.rs  disconnect.rs  estimate.rs  export.rs  guide.txt  help.rs  history.rs  import.rs  list.rs  message.rs  metrics.rs  miner.rs  mod.rs  monitor.rs  mute.rs  network.rs  node.rs  ping.rs  pskb.rs  reload.rs  rpc.rs  select.rs  send.rs  server.rs  settings.rs  sign.rs  sweep.rs  test.rs  theme.rs  track.rs  transfer.rs  wallet.rs
cli/src/wizards/: account.rs  import.rs  wallet.rs
components/addressmanager/: Cargo.toml
components/addressmanager/src/: lib.rs  port_mapping_extender.rs
components/connectionmanager/: Cargo.toml
components/connectionmanager/src/: lib.rs
components/consensusmanager/: Cargo.toml
components/consensusmanager/src/: batch.rs  lib.rs  session.rs
consensus/: Cargo.toml
consensus/benches/: check_scripts.rs  parallel_muhash.rs
consensus/client/: Cargo.toml
consensus/client/src/: error.rs  hash.rs  header.rs  imports.rs  input.rs  lib.rs  optional_header.rs  outpoint.rs  output.rs  parents.rs  sign.rs  signing.rs  transaction.rs  utils.rs  utxo.rs
consensus/core/: Cargo.toml
consensus/core/benches/: serde_benchmark.rs
consensus/core/src/: acceptance_data.rs  block.rs  blockhash.rs  blockstatus.rs  constants.rs  header.rs  lib.rs  merkle.rs  muhash.rs  network.rs  pruning.rs  sign.rs  subnets.rs  trusted.rs  tx.rs  zkp_batch.rs
consensus/notify/: Cargo.toml
consensus/notify/src/: collector.rs  connection.rs  notification.rs  notifier.rs  root.rs  service.rs
consensus/pow/: Cargo.toml
consensus/pow/benches/: bench.rs
consensus/pow/src/: lib.rs  matrix.rs  memory_loop.rs  wasm.rs  xoshiro.rs
consensus/src/: config.rs  errors.rs  params.rs  test_helpers.rs
consensus/src/consensus/: cache_policy_builder.rs  ctl.rs  factory.rs  mod.rs  services.rs  storage.rs  test_consensus.rs  utxo_set_override.rs
consensus/src/constants/: mod.rs
consensus/src/pipeline/: deps_manager.rs  mod.rs  monitor.rs
consensus/src/processes/: Parallel Processing.md  block_depth.rs  coinbase.rs  difficulty.rs  mod.rs  parents_builder.rs  past_median_time.rs  pruning.rs  relations.rs  traversal_manager.rs  window.rs
consensus/wasm/: Cargo.toml
consensus/wasm/src/: error.rs  utils.rs
crypto/dilithium/: Cargo.toml
crypto/dilithium/src/: lib.rs
crypto/merkle/: Cargo.toml
crypto/merkle/src/: lib.rs
crypto/plonky3/: Cargo.toml
crypto/plonky3-old/: Cargo.toml
crypto/plonky3-old/src/: lib.rs
crypto/plonky3/src/: air.rs  batch.rs  config.rs  lib.rs  node.rs  prover.rs  verifier.rs
crypto/plonky3/tests/: stark_test.rs
crypto/txscript/: Cargo.toml
crypto/txscript/errors/: Cargo.toml
crypto/txscript/src/: data_stack.rs  error.rs  lib.rs  runtime_sig_op_counter.rs  script_builder.rs  script_class.rs  standard.rs
garud/: Cargo.toml
garud/benches/: bench.rs
garud/src/: main.rs
indexes/processor/: Cargo.toml
indexes/processor/src/: errors.rs  processor.rs  service.rs
indexes/utxoindex/: Cargo.toml
indexes/utxoindex/src/: index.rs  update_container.rs
metrics/core/: Cargo.toml
metrics/core/src/: data.rs  error.rs  lib.rs
mining/: Cargo.toml
mining/benches/: bench.rs
mining/errors/: Cargo.toml
mining/errors/src/: block_template.rs  mempool.rs
mining/src/: cache.rs  errors.rs  lib.rs  manager.rs  manager_tests.rs  monitor.rs
mining/src/block_template/: builder.rs  errors.rs  selector.rs
mining/src/feerate/: fee_estimation.ipynb  mod.rs
mining/src/mempool/: check_transaction_standard.rs  config.rs  errors.rs  handle_new_block_transactions.rs  mod.rs  populate_entries_and_try_validate.rs  remove_transaction.rs  replace_by_fee.rs  validate_and_insert_transaction.rs
mining/src/model/: candidate_tx.rs  mod.rs  owner_txs.rs  topological_sort.rs  tx_insert.rs
mining/src/testutils/: coinbase_mock.rs  consensus_mock.rs
notify/: Cargo.toml
notify/benches/: bench.rs
notify/src/: broadcaster.rs  collector.rs  lib.rs  listener.rs  notification.rs  notifier.rs  root.rs  scope.rs  subscriber.rs
notify/src/address/: mod.rs  tracker.rs
notify/src/subscription/: array.rs  compounded.rs  context.rs  single.rs
protocol/flows/: Cargo.toml
protocol/flows/src/: flow_context.rs  flow_trait.rs  service.rs
protocol/mining/: Cargo.toml
protocol/mining/src/: rule_engine.rs
rpc/core/: Cargo.toml
rpc/core/src/: error.rs  lib.rs
rpc/service/: Cargo.toml
rpc/service/src/: collector.rs  service.rs
sahyadrid/: Cargo.toml  README.md
sahyadrid/src/: args.rs  daemon.rs  main.rs
testing/integration/: Cargo.toml
testing/integration/src/: consensus_integration_tests.rs  consensus_pipeline_tests.rs  daemon_integration_tests.rs  mempool_benchmarks.rs  rpc_perf_benchmarks.rs  rpc_tests.rs  subscribe_benchmarks.rs
wasm/: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build-docs  build-node  build-node-dev  build-release  build-web  build-web-dev
wasm/core/: Cargo.toml
wasm/examples/: init.js  package.json
wasm/examples/browser-extension/: index.html  server.js
wasm/examples/web/: browser-extension.html  get-block-dag-info.html  get-server-info.html  index.html  subscribe-block-added.html  subscribe-daa-changed.html  xpub.html  (+1 more)
wasm/npm/: README.md  index.js  package.json
wasm/src/: lib.rs  version.rs
yugat/: Cargo.toml  generate-json-tests-data.sh
yugat/src/: blocks_json.rs  main.rs
(+587 files in other folders)
