[package]
name = "sydar-wasm"
description = "sydar WASM bindings"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
repository.workspace = true
# wasm-pack requires this value to be a string
# (it can not be derived from the workspace)
license = "ISC"

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if.workspace = true
js-sys.workspace = true
sydar-addresses.workspace = true
sydar-bip32.workspace = true
sydar-consensus-core.workspace = true
sydar-consensus-wasm.workspace = true
sydar-core.workspace = true
sydar-math.workspace = true
sydar-pow.workspace = true
sydar-txscript.workspace = true
sydar-rpc-core.workspace = true
sydar-utils.workspace = true
sydar-wasm-core.workspace = true
sydar-wallet-core.workspace = true
sydar-wallet-keys.workspace = true
sydar-wrpc-client.workspace = true
sydar-wrpc-wasm.workspace = true
num.workspace = true
wasm-bindgen.workspace = true
workflow-log.workspace = true
workflow-core.workspace = true
workflow-wasm.workspace = true

[features]
wasm32-sdk = [
    "sydar-wallet-core/wasm32-sdk",
    "sydar-pow/wasm32-sdk",
    "sydar-txscript/wasm32-sdk",
]
wasm32-core = [
    "sydar-wallet-core/wasm32-core",
    "sydar-pow/wasm32-sdk",
    "sydar-txscript/wasm32-sdk",
]
wasm32-rpc = [
    "sydar-consensus-core/wasm32-sdk",
    "sydar-consensus-wasm/wasm32-sdk",
    "sydar-wrpc-client/wasm32-sdk",
    "sydar-wrpc-wasm/wasm32-sdk",
]
wasm32-keygen = []
default = []

[package.metadata.docs.rs]
targets = ["wasm32-unknown-unknown"]

[package.metadata.emanate.wasm]
targets = [
    { target = "nodejs", out-dir = "nodejs/sydar" },
    { target = "web", out-dir = "web/sydar" },
]
folder = "setup"

# Workaround for Rust 1.87.0
# https://github.com/rust-lang/rust/issues/141048
[package.metadata.wasm-pack.profile.release]
# This optimization configuration requires "-Ctarget-cpu=mvp" Rustflag (only enable W3C MVP feature set)
# This flag is automatically used either via (release optimized) build script at root
#   or via .cargo/config.toml when executing the build from /wasm
wasm-opt = ["-O","--enable-bulk-memory"]

[lints]
workspace = true
