[package]
name = "yugat"
description = "sydar Network Simulator"
publish = false
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sydar-alloc.workspace = true            # This changes the global allocator for all of the next dependencies so should be kept first
sydar-consensus-core.workspace = true
sydar-consensus-notify.workspace = true
sydar-consensus.workspace = true
sydar-core.workspace = true
sydar-database.workspace = true
sydar-hashes.workspace = true
sydar-perf-monitor.workspace = true
sydar-utils.workspace = true

async-channel.workspace = true
cfg-if.workspace = true
clap.workspace = true
dhat = { workspace = true, optional = true }
futures-util.workspace = true
futures.workspace = true
flate2.workspace = true
indexmap.workspace = true
itertools.workspace = true
log.workspace = true
num_cpus.workspace = true
rand_distr.workspace = true
rand.workspace = true
rayon.workspace = true
sydar-dilithium.workspace = true
sha2.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
serde_json.workspace = true
serde.workspace = true
faster-hex.workspace = true
sydar-testing-integration.workspace = true


[features]
heap = ["dhat", "sydar-alloc/heap"]
semaphore-trace = ["sydar-utils/semaphore-trace"]

[lints]
workspace = true
