[package]
name = "sydar-connectionmanager"
description = "sydar connection manager"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
duration-string.workspace = true
futures-util.workspace = true
itertools.workspace = true
sydar-addressmanager.workspace = true
sydar-core.workspace = true
sydar-p2p-lib.workspace = true
sydar-utils.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
tokio.workspace = true

[lints]
workspace = true