[package]
name = "sydar-consensusmanager"
description = "sydar consensus library"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
duration-string.workspace = true
futures-util.workspace = true
futures.workspace = true
itertools.workspace = true
sydar-addresses.workspace=true
sydar-consensus-core.workspace = true
sydar-consensus-notify.workspace = true
sydar-core.workspace = true
sydar-utils.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
tokio.workspace = true

[lints]
workspace = true
