[package]
name = "sydar-consensus-notify"
description = "sydar consensus notifier"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-channel.workspace = true
cfg-if.workspace = true
derive_more.workspace = true
futures.workspace = true
sydar-consensus-core.workspace = true
sydar-core.workspace = true
sydar-hashes.workspace = true
sydar-notify.workspace = true
sydar-utils.workspace = true
log.workspace = true
paste.workspace = true
thiserror.workspace = true
triggered.workspace = true

[lints]
workspace = true
