[package]
name = "sydar-index-processor"
description = "sydar index processor"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sydar-consensus-core.workspace = true
sydar-consensus-notify.workspace = true
sydar-consensusmanager.workspace = true
sydar-core.workspace = true
sydar-database.workspace = true
sydar-hashes.workspace = true
sydar-index-core.workspace = true
sydar-notify.workspace = true
sydar-utils.workspace = true
sydar-utxoindex.workspace = true

async-channel.workspace = true
async-trait.workspace = true
derive_more.workspace = true
futures.workspace = true
log.workspace = true
paste.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [ "rt-multi-thread", "macros", "signal" ]}
triggered.workspace = true

[dev-dependencies]
sydar-consensus.workspace = true
parking_lot.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
rand = {workspace = true,  features = [ "small_rng" ]}

[lints]
workspace = true