[package]
name = "sydar-rpc-service"
description = "sydar RPC service"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sydar-addresses.workspace = true
sydar-consensus-core.workspace = true
sydar-consensus-notify.workspace = true
sydar-consensusmanager.workspace = true
sydar-core.workspace = true
sydar-hashes.workspace = true
sydar-index-core.workspace = true
sydar-math.workspace = true
sydar-mining.workspace = true
sydar-notify.workspace = true
sydar-p2p-flows.workspace = true
sydar-p2p-lib.workspace = true
sydar-p2p-mining.workspace = true
sydar-perf-monitor.workspace = true
sydar-rpc-core.workspace = true
sydar-txscript.workspace = true
sydar-utils.workspace = true
sydar-utils-tower.workspace = true
sydar-utxoindex.workspace = true

async-trait.workspace = true
log.workspace = true
tokio.workspace = true
triggered.workspace = true
workflow-rpc.workspace = true
faster-hex.workspace = true

[lints]
workspace = true
